# OpenGL_Renderer

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: basic.shader
res/textures/: skancodeLogo.jfif
src/: DoubleMario.cpp  IndexBuffer.cpp  RenderExample2D.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  main.cpp
src/INCLUDES/: DoubleMario.h  IndexBuffer.h  RenderExample.h  RenderExample2D.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/INCLUDES/utils/: glErrorUtils.h  shaderUtils.h
src/utils/: glErrorUtils.cpp  shaderUtils.cpp
